# crimson-lang

./: .gitattributes  CMakeLists.txt  README.md  compiler.cc  compiler.h  diagnostic.cc  diagnostic.h  lexer.cc  lexer.h  main.cc  test.sh
.github/workflows/: test.yml
docs/: basic_types.md
tests/: diff_test.cc
